<resources>
    <!-- App -->
    <string name="app_name">Vultr API</string>
    <string name="api_key">Enter API Key</string>
    <string name="base_uri">https://api.vultr.com/</string>
    <string name="ok">OK</string>


    <!-- MainActivity -->
    <string name="lblCurrentBalance">Balance</string>
    <string name="lblPendingCharges">Pending Charges</string>
    <string name="lblRemainBalance">Remaining Balance</string>
    <string name="btnReload">Reload</string>
    <string name="btnStop">Stop</string>
    <string name="btnStart">Start</string>
    <string name="loadError">Unable to load</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Vultr API</string>
    <string name="account">Account Balance</string>
    <string name="server">Server</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Server fragment -->
    <string name="label">Server Name </string>
    <string name="os">OS </string>
    <string name="ip">Server IP </string>
    <string name="ram">Ram </string>
    <string name="serverState">Server State</string>
    <string name="powerStatus">Power Status</string>
    <string name="pendingCharges">Pending Charges</string>
    <string name="bandwidth">Monthly Bandwidth</string>
    <string name="showdetail">Show details</string>
    <string name="server_information">Server information</string>
    <string name="usage">Usage</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="bandwidthHistory">Bandwidth History</string>
    <string name="view">Tab here to view</string>
    <string name="title_activity_bandwidth_graph">BandwidthGraph</string>
    <string name="str_now_loading">Now Loading</string>
    <string name="str_loading">Wait while loading ...</string>
    <string name="firewall">Firewall</string>
    <string name="btnAddFirewallGroup">Add firewall group</string>

</resources>
