<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCurrentBalance"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/txtCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="18dp"
        android:text="@string/loadError"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        tools:text="0.00" />

    <TextView
        android:id="@+id/lblPendingCharges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lblPendingCharges"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/txtPendingCharges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="18dp"
        android:text="@string/loadError"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        tools:text="0.00" />

    <TextView
        android:id="@+id/lblRemainBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lblRemainBalance"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/txtRemainBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="18dp"
        android:text="@string/loadError"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        tools:text="0.00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btnReload"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReload" />

    </LinearLayout>

</LinearLayout>