<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLabel"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                tools:text="Name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/os"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblOS" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:id="@+id/txtOs"
                tools:text="OS" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblIP" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtIP"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                tools:text="IP" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/ram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblRam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtRam"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                tools:text="Ram" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/serverState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblState" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtState"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                tools:text="OK" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/pendingCharges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblPendingCharges" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPendingCharges"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                tools:text="$0.00" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/bandwidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblBandwidth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtBandwidth"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                tools:text="0.00 GB of 500 GB (5%)" />

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btnReload"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReload" />

    </LinearLayout>


</LinearLayout>