<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:id="@+id/lblServerName" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/txtServerName"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:layout_height="wrap_content"
            tools:text="Server Name" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:id="@+id/lblIP" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtIP"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            tools:text="IP" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/pendingCharges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:id="@+id/lblPendingCharges" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPendingCharges"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            tools:text="$0.00" />
    </TableRow>

</TableLayout>